# comfyui-autograph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  README.md  pyproject.toml
autoflow/: __init__.py  cli.py  connection.py  convert.py  flowtree.py  models.py
autograph/: __init__.py  __main__.py  api.py  cli.py  comfyproc.py  connection.py  convert.py  dag.py  defaults.py  flowtree.py  inprocess.py  map.py  model_layer.py  models.py  net.py  origin.py  pngmeta.py  results.py  ws.py
docs/: advanced.md  contributing-tests.md  convert.md  error-handling.md  execute.md  fastapi.md  force-recompute.md  load-vs-convert.md  map-strings-and-paths.md  mapping.md  node-info-and-env.md  progress-events.md  submit-and-images.md  troubleshooting.md
docs/research/: DotAccessorPlan.md  FlowBuilder.md  NodeInfoEdgeCases.md  reworkUnitTests.md  unittest-audit.md
examples/code/: client_example.py  console_convert_example.py  debug_connections.py  demo_builder.py  diag_nodeinfo.py  docs-test.py  fastapi_example.py  test_connections-01.py
examples/unittests/: __init__.py  audit_node_info.py  harness.py  main.py
examples/unittests/stages/: __init__.py  phase_01_bootstrap.py  phase_02_nodeinfo.py  phase_03_flow.py  phase_04_conversion.py  phase_05_apiflow.py  phase_06_execution.py  phase_07_internals.py  phase_08_docs.py  phase_09_builder.py  stage_00_bootstrap.py  stage_01_load_access.py  stage_02_convert_metadata.py  stage_03_find_navigate.py  stage_04_mapping.py  stage_05_fixtures.py  stage_06_server.py  (+20 more)
examples/workflows/: workflow-api.json  workflow.json
