[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-autograph"
dynamic = ["version"]
description = "Pure Python automation for ComfyUI: convert workflows, submit jobs, fetch images—no GUI required"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "Chris Reid" }
]
dependencies = []
keywords = [
    "comfyui",
    "automation",
    "workflow",
    "workflow.json",
    "workflow-api",
    "workflow-api.json",
    "stable-diffusion",
    "image-generation",
    "nodes",
    "renderables",
    "flow",
    "apiflow",
    "pipeline",
    "ml",
    "ai",
    "api",
]

[project.optional-dependencies]
pillow = ["pillow"]

[project.urls]
Homepage = "https://github.com/chrisdreid/comfyui-autograph"
Documentation = "https://github.com/chrisdreid/comfyui-autograph#readme"
Repository = "https://github.com/chrisdreid/comfyui-autograph"
Issues = "https://github.com/chrisdreid/comfyui-autograph/issues"

[project.scripts]
autograph = "autograph.cli:main"

[tool.setuptools.dynamic]
version = {attr = "autograph.version.__version__"}

[tool.setuptools.packages.find]
include = ["autograph*"]

[tool.setuptools.package-data]
autograph = ["py.typed"]
